dataset1235/2025-2/2868285114/users/2357405339/executions/3792430146_254684124.log
== SUBMISSION (2025-09-02 22:45:50)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 18)
print(Maior_de_idade)

else:
 print(Menor_de_idade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if (idade >= 18)
                    ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if (idade >= 18)
                    ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if (idade >= 18)
                    ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if (idade >= 18)
                    ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if (idade >= 18)
                    ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if (idade >= 18)
                    ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:46:15)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 18):
print(Maior_de_idade)

else:
 print(Menor_de_idade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:46:42)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 18):
print("Maior_de_idade")

else:
 print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:46:16)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 18):
print(Maior_de_idade)

else:
 print(Menor_de_idade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:48:35)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 18):
 print("Maior_de_idade")

else:
 print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:47:53)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 18):
print("Maior_de_idade")

else:
 print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
